# tex-render

./: Cargo.toml  Dockerfile  Dockerfile.aliyun  Dockerfile.bulleye  Dockerfile.test  README.md  build.rs  settings-production.toml  settings.toml
.github/workflows/: deploy-k8s.yml  deploy.yml
config/tex-conf/: local.conf
docs/api/: task.md
docs/api/pipeline/: pipeline.md
docs/api/user/: user-conf.md
docs/deploy/: tex-font.md
docs/deploy/deployment/: cv-render-service.yaml
docs/deploy/service/: cv-render.yaml
docs/dev/: dev.md
script/: build-linux.sh  onekey-deploy-tencent.sh  startup-app.sh  startup-production.sh
src/: main.rs
src/controller/: mod.rs
src/controller/proj/: mod.rs  proj_controller.rs
src/controller/tex/: mod.rs  tex_controller.rs
src/model/: mod.rs
src/model/cv/: cv_gen.rs  cv_main.rs  mod.rs
src/model/cv/edu/: edu.rs  mod.rs
src/model/cv/lang/: cv_lang_resp.rs  mod.rs
src/model/cv/project/: cv_project_resp.rs  mod.rs
src/model/cv/skill/: cv_skill_resp.rs  mod.rs
src/model/cv/work/: cv_work_resp.rs  mod.rs
src/model/project/: compile_app_params.rs  mod.rs  tex_comp_queue.rs
src/model/request/: mod.rs
src/model/response/: mod.rs
src/model/template/: cv_template.rs  mod.rs
src/model/user/: mod.rs  tex_user_config.rs
src/render/: mod.rs  render_worker.rs
src/render/cv/: cv_render.rs  mod.rs
src/rest/client/: cv_client.rs  mod.rs  texhub_queue_client.rs
src/service/: mod.rs  project_service.rs
src/task/: app_init.rs  compile_task_consumer.rs  gen_cv_worker.rs  mod.rs
src/util/: cv_util.rs  mod.rs
(+44 files in other folders)
