[package]
name = "cv-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
config = { version = "0.11.0"}
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git", branch = "main", features = ["model","common","rwconfig","texhub"]}
chrono = "0.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }
sha256 = "1.1.3"
log4rs = "1.2.0"
log = "0.4.0"
actix-web = "4"
actix-web-lab = "0.18.5"
parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = [
    "std",
] }
futures = "0.3"
actix-http = "3.11.2"
actix-rt = "0.2.5"
redis = { version = "=0.27.2", features = ["streams"] }
redlock = {git="https://github.com/badboy/redlock-rs.git", branch="main"}
pq-sys = { version = "0.7.5", features = ["bundled"] }
openssl-sys = { version = "0.9.109", features = ["vendored"] }
